--- a/src/hoja-de-estilos/Navbar.css
+++ b/src/hoja-de-estilos/Navbar.css
@@ -49,6 +49,10 @@
     top: 0%;
     left: 62px;
   }
+
+  .logo-link {
+    text-decoration: none;
+  }
   
   .logo-img {
     margin-right: 8px;
@@ -98,15 +102,15 @@
     transition: 0.4s;
   }
   
-  .daily-content,
-  .sidebar-right,
-  .sidebar-left {
-    padding-top: 20px;
-  }
+
   
   .header {
     position: relative;
     min-width: 1441px;
     width: 1441px;
+  }
+
+  .nav-item {
+    list-style: none;
   }
   
