--- a/src/main/index.css
+++ b/src/main/index.css
@@ -1,1 +1,12 @@
 * { font-family:  "montserrat";}
+
+:root {
+    --solitude: #f1f2f6;
+}
+
+body {
+    margin: 0;
+    padding: 0;
+    background-color: var(--solitude);
+    font-family: "Montserrat";
+  }
